# rl

./: .gitignore  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt
src/: main.py
src/c4/: board.py  c4_board.py  c4_env.py  c4_game.py  c4_reinforcement_learning.py  game.py  no_clobber2_env.py  no_clobber2_reinforcement_learning.py  no_clobber3_env.py  no_clobber_env.py  no_clobber_reinforcement_learning.py  reinforcement_learning.py  ttt_1_play_env.py  ttt_1_play_reinforcement_learning.py  ttt_2_play_env.py  ttt_2_play_reinforcement_learning.py  ttt_board.py  ttt_env.py  ttt_game.py  ttt_optimal_player.py  ttt_q_learning.py  ttt_reinforcement_learning.py
src/c4/zzz_archive/: no_clobber2_env.py  no_clobber2_reinforcement_learning.py  no_clobber3_reinforcement_learning.py  no_clobber_reinforcement_learning.py  ttt_env.py
test/c4/: board_test.py  c4_board_test.py  c4_env_test.py  ttt_board_test.py
