[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "c4-rl"
version = "0.1.0"
description = "Reinforcement Learning for Connect Four"
requires-python = ">=3.8"
dependencies = [
    "gymnasium",
    "stable-baselines3",
    "numpy",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["c4*"]
